Require Kryo class registration in the state serializer
Registration is keyed off topology.fall.back.on.java.serialization,
matching the tuple path in DefaultKryoFactory. Registers the types Storm
persists without the component declaring them (byte[], CheckPointState),
after the configured registrations so their ids are unaffected.

Clears the class resolver's name caches on reset: Kryo skips that when
registration is required, which would desynchronise a second read of
state written by an earlier release.