@@ -15,6 +15,7 @@ package org.apache.storm.state;
 import com.esotericsoftware.kryo.Kryo;
 import com.esotericsoftware.kryo.io.Input;
 import com.esotericsoftware.kryo.io.Output;
+import com.esotericsoftware.kryo.util.DefaultClassResolver;
 import com.esotericsoftware.kryo.util.DefaultInstantiatorStrategy;
 
 import java.util.ArrayList;
@@ -27,8 +28,10 @@ import org.apache.storm.Config;
 import org.apache.storm.serialization.KryoTupleDeserializer;
 import org.apache.storm.serialization.KryoTupleSerializer;
 import org.apache.storm.serialization.SerializationFactory;
+import org.apache.storm.spout.CheckPointState;
 import org.apache.storm.task.TopologyContext;
 import org.apache.storm.tuple.TupleImpl;
+import org.apache.storm.utils.ObjectReader;
 import org.objenesis.strategy.StdInstantiatorStrategy;
 
 /**
@@ -42,8 +45,18 @@ public class DefaultStateSerializer<T> implements Serializer<T> {
     private final ThreadLocal<Kryo> kryo = new ThreadLocal<Kryo>() {
         @Override
         protected Kryo initialValue() {
-            Kryo obj = new Kryo();
-            obj.setRegistrationRequired(false);
+            // Same as new Kryo(), except for the class resolver: the no-arg constructor is
+            // new Kryo(new DefaultClassResolver(), null).
+            Kryo obj = new Kryo(new StateClassResolver(), null);
+            // Registration bounds the set of classes this serializer will construct from stored
+            // bytes to the ones the topology declared. It is keyed off the same config as the tuple
+            // path in DefaultKryoFactory, so a topology that has opted into permissive Kryo globally
+            // keeps the previous behaviour.
+            // Note this Kryo is independent of the one SerializationFactory builds for tuples: the
+            // two id spaces must not be merged, since the tuple ids are a wire format between workers.
+            boolean fallBackOnJavaSerialization = ObjectReader.getBoolean(
+                topoConf == null ? null : topoConf.get(Config.TOPOLOGY_FALL_BACK_ON_JAVA_SERIALIZATION), false);
+            obj.setRegistrationRequired(!fallBackOnJavaSerialization);
             if (context != null && topoConf != null) {
                 KryoTupleSerializer ser = new KryoTupleSerializer(topoConf, context);
                 KryoTupleDeserializer deser = new KryoTupleDeserializer(topoConf, context);
@@ -52,6 +65,7 @@ public class DefaultStateSerializer<T> implements Serializer<T> {
             if (!registrations.isEmpty()) {
                 SerializationFactory.register(obj, registrations);
             }
+            registerInternalClasses(obj);
             obj.setInstantiatorStrategy(new DefaultInstantiatorStrategy(new StdInstantiatorStrategy()));
             return obj;
         }
@@ -98,6 +112,53 @@ public class DefaultStateSerializer<T> implements Serializer<T> {
     public T deserialize(byte[] b) {
         Input input = new Input(b);
         return (T) kryo.get().readClassAndObject(input);
+    }
+
+    /**
+     * Registers the types Storm's own state encoding and checkpointing persist without the component
+     * declaring them.
+     *
+     * <p>Called after the configured registrations so that the ids assigned to those are unaffected.
+     * {@link Kryo#register(Class)} returns any existing registration, so a class already declared
+     * through {@link Config#TOPOLOGY_STATE_KRYO_REGISTER} keeps the id assigned there.
+     *
+     * <p>Deliberately limited to types Storm itself writes without registering them elsewhere. The
+     * windowing types reachable from a persisted {@code WindowState.WindowPartition} are registered
+     * by {@code PersistentWindowedBoltExecutor} through {@link Config#TOPOLOGY_STATE_KRYO_REGISTER}
+     * and must not be added here: that list includes JDK types in {@code java.base} whose eager
+     * {@code FieldSerializer} construction needs reflective access the module system denies unless
+     * the worker is started with a matching {@code --add-opens}.
+     */
+    private static void registerInternalClasses(Kryo kryo) {
+        // DefaultStateEncoder wraps every value as Optional<byte[]>.
+        kryo.register(byte[].class);
+        // CheckpointSpout's own state, which it stores without registering.
+        kryo.register(CheckPointState.class);
+        kryo.register(CheckPointState.State.class);
+    }
+
+    /**
+     * A class resolver that always clears its name caches on reset.
+     *
+     * <p>{@link DefaultClassResolver#reset()} returns immediately when registration is required, on
+     * the assumption that name encoding cannot occur in that mode. That assumption does not hold
+     * when reading back state: bytes written by an earlier release carry name-encoded classes, and
+     * Kryo skips the class name in the stream for a name id it believes it has already seen. Left
+     * uncleared, the second such read on a Kryo instance desynchronises from the stream and fails
+     * with a buffer underflow rather than reading the value.
+     */
+    private static class StateClassResolver extends DefaultClassResolver {
+        @Override
+        public void reset() {
+            super.reset();
+            if (classToNameId != null) {
+                classToNameId.clear(2048);
+            }
+            if (nameIdToClass != null) {
+                nameIdToClass.clear();
+            }
+            nextNameId = 0;
+        }
     }
 
     private static class TupleSerializer extends com.esotericsoftware.kryo.Serializer<TupleImpl> {
